compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__invalid_string_prefix_pattern_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let assert \"prefix\" <> coolSuffix = \"prefix-suffix\""
---
error: Invalid name
  ┌─ /src/one/two.gleam:1:24
  │
1 │ let assert "prefix" <> coolSuffix = "prefix-suffix"
  │                        ^^^^^^^^^^ This is not a valid name

Hint: Names start with a lowercase letter and contain a-z, 0-9, or _.
Try: cool_suffix
